# workshop-restAPI-fastAPI-deploy

./: README.md  exemplo_00.py  exemplo_01_dobra_numero.py  exemplo_01_numero.py  exemplo_03.py  exemplo_04.py  numeros.txt  pyproject.toml
fabio/src/controller/: user.py
fabio/src/db/: connection.py
fabio/src/models/: user.py
fabio/src/routes/: user.py
luciano-starter/: main.py  prog_a.py  prog_b.py
luciano-starter/recursos/: file.txt
ml/: main.py  modelo.py  modelo_casas.pkl
